# ocr-suite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt
.ci/: build.py
.github/actions/conan-setup/: action.yml
.github/workflows/: build.yml
cmake/: config.h.in  install_helper.cmake  package_helper.cmake
include/ocs/: bmp.h  database.h  ocr.h  options.h  speed_meter.h  util.h  value_queue.h  video.h
include/ocs/common/: database.h  ocr_result.h  util.h  value_queue.h  video.h
include/ocs/db/: database.h  statement.h
include/ocs/ffmpeg/: decoder.h  traits.h
include/ocs/recognition/: bmp.h  ocr.h  options.h  speed_meter.h  util.h  value_queue.h  video.h
include/ocs/recognition/provider/: provider.h  tesseract.h  vision_kit.h
include/ocs/viewer/: database.h  options.h  results.h  search.h
include/ocs/viewer/render/: backend.h  frontend.h  window.h
include/ocs/viewer/render/imgui/: imgui_impl_sdl_es2.h  imgui_impl_sdl_es3.h  std_input_text.h
include/ocs/viewer/render/impl/: gles2.h  gles3.h  opengl2.h  opengl3.h
include/ocs/viewer/views/: drawable.h  frame_view.h  search_results_view.h  search_view.h  util.h  viewer.h
profiles/: global.conf  ubuntu
src/: bmp.cpp  database.cpp  main.cpp  ocr.cpp  options.cpp  speed_meter.cpp  video.cpp
src/common/: database.cpp  video.cpp
src/common/db/updates/: update.inl  v0.inl  v1.inl  v2.inl  v3.inl
src/db/: database.cpp  statement.cpp
src/db/updates/: update.inl  v0.inl  v1.inl  v2.inl
src/ffmpeg/: decoder.cpp  traits.cpp
src/recognition/: bmp.cpp  main.cpp  ocr.cpp  options.cpp  speed_meter.cpp  video.cpp
src/recognition/provider/: tesseract.cpp  vision_kit.cpp  vision_kit.swift
src/tools/: CMakeLists.txt  ocr-cli.cpp  ocr-results-viewer.cpp
src/viewer/: database.cpp  main.cpp  options.cpp  results.cpp  search.cpp
src/viewer/db/updates/: update.inl  v0.inl
src/viewer/fonts/: .gitignore  dejavu.h  make_font_file.sh
src/viewer/render/: backend.cpp  frontend.cpp  window.cpp
src/viewer/render/imgui/: imgui_impl_sdl_es2.cpp  imgui_impl_sdl_es3.cpp  std_input_text.cpp
src/viewer/render/impl/: gles2.cpp  gles3.cpp  opengl2.cpp  opengl3.cpp
src/viewer/views/: frame_view.cpp  search_results_view.cpp  search_view.cpp  viewer.cpp
test/: CMakeLists.txt
test/src/: value_queue.cpp
tools/ocs-watcher/: pyproject.toml  setup.py
tools/ocs-watcher/ocsw/: __main__.py  options.py  runner.py  watcher.py
tools/ocs-watcher/src/ocsw/: __init__.py  __main__.py  config.py  executor.py  file_filter.py  runner.py  single_instance.py  watcher.py
tools/ocs-watcher/src/ocsw/executor/: base.py  parallel.py  sequential.py
tools/ocs-watcher/tests/: README.md  dummy-config.toml  test_config.py  test_single_instance.py
