[project]
authors = [
    {name = "Dennis Sitelew", email = "yowidin@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "watchdog~=6.0.0",
    "pydantic>=2.11.5",
    "tomlkit>=0.13.3",
    "psutil<8.0.0,>=7.0.0",
]
name = "ocsw"
version = "0.0.2"
description = "OCR suite watcher"

[project.scripts]
ocs-watcher = "ocsw.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ocsw"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-cov<7.0.0,>=6.0.0",
    "coverage<8.0.0,>=7.6.7",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.pdm.build]
includes = ["src/ocsw"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"